Fixing the overflow issue.

--- a/src/assets/scss/theme-1.scss
+++ b/src/assets/scss/theme-1.scss
@@ -430,7 +430,8 @@ label {
     width: 100%;
     position: relative;
     color: #fff;
-    background: #101113
+    background: #101113;
+    overflow: hidden;
 }
 
 .logo-holder {
